# online_mart

inventory_service/: pyproject.toml
inventory_service/inventory_service/: database.py  main.py  models.py  routes.py
notification_service/: pyproject.toml
notification_service/notification_service/: email_service.py  main.py  models.py  routes.py
order_service/: pyproject.toml
order_service/order_service/: database.py  main.py  models.py  routes.py
payment_service/: pyproject.toml
payment_service/payment_service/: models.py  payfast_service.py  stripe_service.py
product_service/: Dockerfile  docker-compose.yml  pyproject.toml
product_service/product_service/: database.py  main.py  models.py  routes.py
user_service/: pyproject.toml
user_service/user_service/: auth.py  database.py  main.py  models.py  routes.py
zia_online_mart/: pyproject.toml
