[tool.poetry]
name = "product-service"
version = "0.1.0"
description = "mart-product-service"
authors = ["MuhammadHammadBashir0315 <hammad.bashir0315@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
sqlmodel = "^0.0.19"
psycopg2-binary = "^2.9.9"
fastapi = "^0.111.0"
uvicorn = {extras = ["standard"], version = "^0.30.1"}
confluent-kafka = "^2.4.0"
protobuf = "^5.27.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
